--- a/common/tests/Makefile.in
+++ b/common/tests/Makefile.in
@@ -162,7 +162,7 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 SUBDIRS = .
-AM_CPPFLAGS = $(ATF_CFLAGS) -I$(top_srcdir)/includes
+AM_CPPFLAGS = $(ATF_CFLAGS) -std=c99 -I$(top_srcdir)/includes
 ATF_TESTS = alloc_unittest
 alloc_unittest_SOURCES = test_alloc.c $(top_srcdir)/tests/t_api_dhcp.c
 alloc_unittest_LDADD = $(ATF_LDFLAGS) ../libdhcp.a \
