[rt25901_atf] Added comments to {server,common}/Makefile.am,  version reverted from 4.2.0-git to 4.2.0

--- a/server/Makefile.am
+++ b/server/Makefile.am
@@ -1,3 +1,7 @@
+# We want to build this directory first, before descending into tests subdir.
+# The reason is that ideally the tests should link existing objects from this
+# directory. That eliminates any discrepancies between tested code and
+# production code. Sadly, we are not there yet.
 SUBDIRS = . tests
 
 AM_CPPFLAGS = -I.. -DLOCALSTATEDIR='"@localstatedir@"'
