--- a/common/tests/Makefile.in
+++ b/common/tests/Makefile.in
@@ -528,8 +528,8 @@ uninstall-am:
 	tags tags-recursive uninstall uninstall-am
 
 
-check: $(ATF_TESTS)
-	atf-run | atf-report
+@HAVE_ATF_TRUE@check: $(ATF_TESTS)
+@HAVE_ATF_TRUE@	atf-run | atf-report
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
 .NOEXPORT:
