--- a/server/tests/Makefile.in
+++ b/server/tests/Makefile.in
@@ -203,6 +203,7 @@ AM_CPPFLAGS = $(ATF_CFLAGS) -DUNIT_TEST -I$(top_srcdir)/includes \
 	-std=c99 -I$(top_srcdir)/bind/include -I$(top_srcdir) \
 	-DLOCALSTATEDIR='"."' -Wno-unused-function \
 	-Wno-error=unused-variable
+EXTRA_DIST = Atffile
 DHCPSRC = ../dhcp.c ../bootp.c ../confpars.c ../db.c ../class.c      \
           ../failover.c ../omapi.c ../mdb.c ../stables.c ../salloc.c \
           ../ddns.c ../dhcpleasequery.c ../dhcpv6.c ../mdb6.c        \
