-n [master] Clean up ATF issues: describe patch to ATF code for solaris 11 remove unneeded options for use on solaris 11 comment out unused hash test [rt32089]

--- a/common/tests/Makefile.am
+++ b/common/tests/Makefile.am
@@ -1,6 +1,6 @@
 SUBDIRS = .
 
-AM_CPPFLAGS = $(ATF_CFLAGS) -std=c99 -I$(top_srcdir)/includes
+AM_CPPFLAGS = $(ATF_CFLAGS) -I$(top_srcdir)/includes
 
 EXTRA_DIST = Atffile
 
