[v4_1_esv] Clean up ATF issues: describe patch to ATF code for solaris 11 remove unneeded options for use on solaris 11 comment out unused hash test [rt32089]

--- a/common/tests/Makefile.in
+++ b/common/tests/Makefile.in
@@ -166,7 +166,7 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 SUBDIRS = .
-AM_CPPFLAGS = $(ATF_CFLAGS) -std=c99 -I$(top_srcdir)/includes
+AM_CPPFLAGS = $(ATF_CFLAGS) -I$(top_srcdir)/includes
 EXTRA_DIST = Atffile
 ATF_TESTS = $(am__append_1)
 @HAVE_ATF_TRUE@alloc_unittest_SOURCES = test_alloc.c $(top_srcdir)/tests/t_api_dhcp.c
