--- a/server/tests/Makefile.in
+++ b/server/tests/Makefile.in
@@ -212,9 +212,8 @@ top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 SUBDIRS = .
 AM_CPPFLAGS = $(ATF_CFLAGS) -DUNIT_TEST -I$(top_srcdir)/includes \
-	-std=c99 -I$(top_srcdir)/bind/include -I$(top_srcdir) \
-	-DLOCALSTATEDIR='"."' -Wno-unused-function \
-	-Wno-error=unused-variable
+	-I$(top_srcdir)/bind/include -I$(top_srcdir) \
+	-DLOCALSTATEDIR='"."'
 EXTRA_DIST = Atffile
 DHCPSRC = ../dhcp.c ../bootp.c ../confpars.c ../db.c ../class.c      \
           ../failover.c ../omapi.c ../mdb.c ../stables.c ../salloc.c \
