--- a/Makefile.in
+++ b/Makefile.in
@@ -307,7 +307,11 @@ EXTRA_DIST = RELNOTES LICENSE \
 	     doc/ja_JP.eucJP/dhclient-script.8 doc/ja_JP.eucJP/dhclient.8 \
 	     doc/ja_JP.eucJP/dhclient.conf.5 doc/ja_JP.eucJP/dhclient.leases.5 \
 	     doc/ja_JP.eucJP/dhcp-eval.5 doc/ja_JP.eucJP/dhcp-options.5 \
-	     doc/examples/dhclient-dhcpv6.conf doc/examples/dhcpd-dhcpv6.conf
+	     doc/examples/dhclient-dhcpv6.conf doc/examples/dhcpd-dhcpv6.conf \
+	     doc/devel/arch.dox doc/devel/atf.dox doc/devel/contrib.dox \
+	     doc/devel/debug.dox doc/devel/isc-logo.jpg doc/devel/mainpage.dox \
+	     doc/devel/omapi.dox doc/devel/qa.dox \
+	     common/tests/Atffile server/tests/Atffile
 
 SUBDIRS = includes tests common minires dst omapip client dhcpctl relay server
 nobase_include_HEADERS = dhcpctl/dhcpctl.h
