--- a/common/tests/Makefile.am
+++ b/common/tests/Makefile.am
@@ -8,11 +8,17 @@ ATF_TESTS =
 
 if HAVE_ATF
 
-ATF_TESTS += alloc_unittest
+ATF_TESTS += alloc_unittest dns_unittest
 
 alloc_unittest_SOURCES = test_alloc.c $(top_srcdir)/tests/t_api_dhcp.c
 alloc_unittest_LDADD = $(ATF_LDFLAGS)
 alloc_unittest_LDADD += ../libdhcp.a  \
+	../../omapip/libomapi.a ../../bind/lib/libdns.a \
+        ../../bind/lib/libisc.a
+
+dns_unittest_SOURCES = dns_unittest.c $(top_srcdir)/tests/t_api_dhcp.c
+dns_unittest_LDADD = $(ATF_LDFLAGS)
+dns_unittest_LDADD += ../libdhcp.a  \
 	../../omapip/libomapi.a ../../bind/lib/libdns.a \
         ../../bind/lib/libisc.a
 
