--- a/omapip/Makefile.in
+++ b/omapip/Makefile.in
@@ -140,7 +140,8 @@ libomapi_a_OBJECTS = $(am_libomapi_a_OBJECTS)
 PROGRAMS = $(noinst_PROGRAMS)
 am_svtest_OBJECTS = test.$(OBJEXT)
 svtest_OBJECTS = $(am_svtest_OBJECTS)
-svtest_DEPENDENCIES = libomapi.a ../bind/lib/libdns.a \
+svtest_DEPENDENCIES = libomapi.a ../bind/lib/libirs.a \
+	../bind/lib/libdns.a ../bind/lib/libisccfg.a \
 	../bind/lib/libisc.a
 AM_V_P = $(am__v_P_@AM_V@)
 am__v_P_ = $(am__v_P_@AM_DEFAULT_V@)
@@ -311,7 +312,9 @@ libomapi_a_SOURCES = protocol.c buffer.c alloc.c result.c connection.c \
 man_MANS = omapi.3
 EXTRA_DIST = $(man_MANS)
 svtest_SOURCES = test.c
-svtest_LDADD = libomapi.a ../bind/lib/libdns.a ../bind/lib/libisc.a
+svtest_LDADD = libomapi.a ../bind/lib/libirs.a ../bind/lib/libdns.a \
+		../bind/lib/libisccfg.a ../bind/lib/libisc.a
+
 all: all-am
 
 .SUFFIXES:
