--- a/relay/Makefile.in
+++ b/relay/Makefile.in
@@ -95,7 +95,8 @@ PROGRAMS = $(sbin_PROGRAMS)
 am_dhcrelay_OBJECTS = dhcrelay.$(OBJEXT)
 dhcrelay_OBJECTS = $(am_dhcrelay_OBJECTS)
 dhcrelay_DEPENDENCIES = ../common/libdhcp.a ../omapip/libomapi.a \
-	../bind/lib/libdns.a ../bind/lib/libisc.a
+	../bind/lib/libirs.a ../bind/lib/libdns.a \
+	../bind/lib/libisccfg.a ../bind/lib/libisc.a
 AM_V_P = $(am__v_P_@AM_V@)
 am__v_P_ = $(am__v_P_@AM_DEFAULT_V@)
 am__v_P_0 = false
@@ -286,7 +287,8 @@ top_srcdir = @top_srcdir@
 AM_CPPFLAGS = -DLOCALSTATEDIR='"@localstatedir@"'
 dhcrelay_SOURCES = dhcrelay.c
 dhcrelay_LDADD = ../common/libdhcp.a ../omapip/libomapi.a \
-		 ../bind/lib/libdns.a ../bind/lib/libisc.a
+		 ../bind/lib/libirs.a ../bind/lib/libdns.a \
+		 ../bind/lib/libisccfg.a ../bind/lib/libisc.a
 
 man_MANS = dhcrelay.8
 EXTRA_DIST = $(man_MANS)
