--- a/server/tests/Makefile.in
+++ b/server/tests/Makefile.in
@@ -566,7 +566,7 @@ DHCPSRC = ../dhcp.c ../bootp.c ../confpars.c ../db.c ../class.c      \
 
 DHCPLIBS = $(top_builddir)/common/libdhcp.a $(top_builddir)/omapip/libomapi.a    \
           $(top_builddir)/dhcpctl/libdhcpctl.a $(top_builddir)/bind/lib/libirs.a \
-	  $(top_builddir)/bind/lib/libdns.a $(top_builddir/bind/lib/libisccfg.a \
+	  $(top_builddir)/bind/lib/libdns.a $(top_builddir)/bind/lib/libisccfg.a \
 	  $(top_builddir)/bind/lib/libisc.a
 
 ATF_TESTS = $(am__append_1)
