[master] Add -df option to client code to help share DUIDs
Add the "-df <duid file>" option to the client code in order
to make it easier to share DUIDs between a v4 instance and
a v6 instance.  This option instructs the client to search
the duid file for a DUID if it didn't find one in the main
lease file.

In addition add the infrastructure for running ATF tests
for the client and write some ATF tests for this patch.

--- a/configure.ac
+++ b/configure.ac
@@ -622,6 +622,7 @@ AC_C_FLEXIBLE_ARRAY_MEMBER
 AC_CONFIG_FILES([
   Makefile
   client/Makefile
+  client/tests/Makefile
   common/Makefile
   common/tests/Makefile
   dhcpctl/Makefile
