[master] Add use-host-decl-names support to BOOTP
    Merges in rt36233.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,19 @@ doc/html
 .deps
 Makefile
 autom4te.cache
+client/dhclient
+client/tests/
+common/tests/dns_unittest
+common/tests/misc_unittest
+config.log
+config.report
+config.status
+dhcpctl/cltest
+dhcpctl/omshell
+doc/devel/doxyfile
+dst/libdst.a
+includes/.dhcpd.h.swp
+includes/stamp-h1
+omapip/svtest
+relay/dhcrelay
+server/dhcpd
