[master] Add use-host-decl-names support to BOOTP
    Merges in rt36233.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,27 @@ doc/html
 .deps
 Makefile
 autom4te.cache
+client/dhclient
+client/tests/
+common/tests/alloc_unittest
+common/tests/dns_unittest
+common/tests/misc_unittest
+config.log
+config.report
+config.status
+dhcpctl/cltest
+dhcpctl/omshell
+doc/devel/doxyfile
+dst/libdst.a
+includes/.dhcpd.h.swp
+includes/stamp-h1
+omapip/svtest
+relay/dhcrelay
+server/dhcpd
+server/tests/dhcpd_unittests
+server/tests/hash_unittests
+server/tests/legacy_unittests
+server/tests/load_bal_unittests
+server/tests/test-suite.log
+tests/libt_api.a
+minires/libres.a
