--- a/common/tests/Makefile.am
+++ b/common/tests/Makefile.am
@@ -8,11 +8,16 @@ ATF_TESTS =
 
 if HAVE_ATF
 
-ATF_TESTS += alloc_unittest
+ATF_TESTS += alloc_unittest ns_name_unittest
 
 alloc_unittest_SOURCES = test_alloc.c $(top_srcdir)/tests/t_api_dhcp.c
 alloc_unittest_LDADD = $(ATF_LDFLAGS)
 alloc_unittest_LDADD += ../libdhcp.a  \
+	../../omapip/libomapi.a ../../dst/libdst.a ../../minires/libres.a
+
+ns_name_unittest_SOURCES = ns_name_test.c $(top_srcdir)/tests/t_api_dhcp.c
+ns_name_unittest_LDADD = $(ATF_LDFLAGS)
+ns_name_unittest_LDADD += ../libdhcp.a  \
 	../../omapip/libomapi.a ../../dst/libdst.a ../../minires/libres.a
 
 check: $(ATF_TESTS)
