--- a/common/tests/Makefile.am
+++ b/common/tests/Makefile.am
@@ -35,7 +35,7 @@ ns_name_unittest_LDADD += ../libdhcp.a  \
 	../../bind/lib/libdns.a ../../bind/lib/libisccfg.a  ../../bind/lib/libisc.a
 
 check: $(ATF_TESTS)
-	atf-run | atf-report
+	sh ${top_srcdir}/tests/unittest.sh
 
 endif
 
